--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,9 @@
     "            count1 = self.size\n",
     "        elif count1 == 0:\n",
     "            return 0\n",
-    "        start_index = self.index - (count1) if self.is_full else 0\n",
+    "        elif (self.is_full != True) and count1 >= self.index: \n",
+    "            count1 = self.index\n",
+    "        start_index = self.index - (count1) \n",
     "        if start_index < 0:\n",
     "            return sum(self.buffer[start_index : self.size] + self.buffer[: start_index - (self.size - count1)]) / count1\n",
     "        return sum(self.buffer[start_index:self.index])/ count1\n"
@@ -33,33 +35,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6.0"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.5\n",
+      "2.0\n",
+      "2.5\n",
+      "3.0\n",
+      "3.5\n",
+      "4.0\n",
+      "4.5\n",
+      "5.0\n",
+      "5.5\n",
+      "6.0\n",
+      "6.5\n",
+      "7.0\n",
+      "7.5\n",
+      "8.0\n",
+      "8.5\n",
+      "9.0\n",
+      "9.5\n",
+      "10.0\n",
+      "10.5\n",
+      "11.0\n",
+      "11.5\n",
+      "12.0\n",
+      "12.5\n",
+      "13.0\n",
+      "13.5\n",
+      "14.0\n",
+      "14.5\n",
+      "15.0\n",
+      "15.5\n",
+      "16.0\n",
+      "16.5\n",
+      "17.0\n",
+      "17.5\n",
+      "18.0\n",
+      "18.5\n",
+      "19.0\n",
+      "19.5\n",
+      "20.0\n",
+      "20.5\n",
+      "21.0\n",
+      "21.5\n",
+      "22.0\n",
+      "22.5\n",
+      "23.0\n",
+      "23.5\n",
+      "24.0\n",
+      "24.5\n",
+      "25.0\n",
+      "25.5\n",
+      "26.0\n",
+      "26.5\n",
+      "27.0\n",
+      "27.5\n",
+      "28.0\n",
+      "28.5\n",
+      "29.0\n",
+      "29.5\n",
+      "30.0\n",
+      "30.5\n",
+      "31.0\n",
+      "31.5\n",
+      "32.0\n",
+      "32.5\n",
+      "33.0\n",
+      "33.5\n",
+      "34.0\n",
+      "34.5\n",
+      "35.0\n",
+      "35.5\n",
+      "36.0\n",
+      "36.5\n",
+      "37.0\n",
+      "37.5\n",
+      "38.0\n",
+      "38.5\n",
+      "39.0\n",
+      "39.5\n",
+      "40.0\n",
+      "40.5\n",
+      "41.0\n",
+      "41.5\n",
+      "42.0\n",
+      "42.5\n",
+      "43.0\n",
+      "43.5\n",
+      "44.0\n",
+      "44.5\n",
+      "45.0\n",
+      "45.5\n",
+      "46.0\n",
+      "46.5\n",
+      "47.0\n",
+      "47.5\n",
+      "48.0\n",
+      "48.5\n",
+      "49.0\n",
+      "49.5\n",
+      "50.0\n",
+      "50.5\n",
+      "51.5\n",
+      "52.5\n",
+      "53.5\n",
+      "54.5\n",
+      "55.5\n",
+      "56.5\n",
+      "57.5\n",
+      "58.5\n",
+      "59.5\n",
+      "60.5\n",
+      "61.5\n",
+      "62.5\n",
+      "63.5\n",
+      "64.5\n",
+      "65.5\n",
+      "66.5\n",
+      "67.5\n",
+      "68.5\n",
+      "69.5\n",
+      "70.5\n",
+      "71.5\n",
+      "72.5\n",
+      "73.5\n",
+      "74.5\n",
+      "75.5\n",
+      "76.5\n",
+      "77.5\n",
+      "78.5\n",
+      "79.5\n",
+      "80.5\n",
+      "81.5\n",
+      "82.5\n",
+      "83.5\n",
+      "84.5\n",
+      "85.5\n",
+      "86.5\n",
+      "87.5\n",
+      "88.5\n",
+      "89.5\n",
+      "90.5\n",
+      "91.5\n",
+      "92.5\n",
+      "93.5\n",
+      "94.5\n",
+      "95.5\n",
+      "96.5\n",
+      "97.5\n",
+      "98.5\n",
+      "99.5\n",
+      "100.5\n",
+      "101.5\n",
+      "102.5\n",
+      "103.5\n",
+      "104.5\n",
+      "105.5\n",
+      "106.5\n",
+      "107.5\n",
+      "108.5\n",
+      "109.5\n",
+      "110.5\n",
+      "111.5\n",
+      "112.5\n",
+      "113.5\n",
+      "114.5\n",
+      "115.5\n",
+      "116.5\n",
+      "117.5\n",
+      "118.5\n",
+      "119.5\n",
+      "120.5\n",
+      "121.5\n",
+      "122.5\n",
+      "123.5\n",
+      "124.5\n",
+      "125.5\n",
+      "126.5\n",
+      "127.5\n",
+      "128.5\n",
+      "129.5\n",
+      "130.5\n",
+      "131.5\n",
+      "132.5\n",
+      "133.5\n",
+      "134.5\n",
+      "135.5\n",
+      "136.5\n",
+      "137.5\n",
+      "138.5\n",
+      "139.5\n",
+      "140.5\n",
+      "141.5\n",
+      "142.5\n",
+      "143.5\n",
+      "144.5\n",
+      "145.5\n",
+      "146.5\n",
+      "147.5\n",
+      "148.5\n",
+      "149.5\n",
+      "150.5\n",
+      "151.5\n",
+      "152.5\n",
+      "153.5\n",
+      "154.5\n",
+      "155.5\n",
+      "156.5\n",
+      "157.5\n",
+      "158.5\n",
+      "159.5\n",
+      "160.5\n",
+      "161.5\n",
+      "162.5\n",
+      "163.5\n",
+      "164.5\n",
+      "165.5\n",
+      "166.5\n",
+      "167.5\n",
+      "168.5\n",
+      "169.5\n",
+      "170.5\n",
+      "171.5\n",
+      "172.5\n",
+      "173.5\n",
+      "174.5\n",
+      "175.5\n",
+      "176.5\n",
+      "177.5\n",
+      "178.5\n",
+      "179.5\n",
+      "180.5\n",
+      "181.5\n",
+      "182.5\n",
+      "183.5\n",
+      "184.5\n",
+      "185.5\n",
+      "186.5\n",
+      "187.5\n",
+      "188.5\n",
+      "189.5\n",
+      "190.5\n",
+      "191.5\n",
+      "192.5\n",
+      "193.5\n",
+      "194.5\n",
+      "195.5\n",
+      "196.5\n",
+      "197.5\n",
+      "198.5\n",
+      "199.5\n"
+     ]
     }
    ],
    "source": [
-    "a = CircularBuffer(9)\n",
-    "a.addMeasurement(1)\n",
-    "a.addMeasurement(2)\n",
-    "a.addMeasurement(3)\n",
-    "a.addMeasurement(4)\n",
-    "a.addMeasurement(5)\n",
-    "a.addMeasurement(6)\n",
-    "a.addMeasurement(7)\n",
-    "a.addMeasurement(8)\n",
-    "a.addMeasurement(9)\n",
-    "a.addMeasurement(10)\n",
-    "a.findAverage(9)\n"
+    "a = CircularBuffer(100)\n",
+    "for i in range(1,250):\n",
+    "    a.addMeasurement(i)\n",
+    "    print(a.findAverage(i))\n",
+    "\n"
    ]
   },
   {
@@ -78,9 +318,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "(48 + 6)/ 9"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
